<resources>
    <string name="app_name">KantinKu</string>
    <string name="regis">REGISTER</string>
    <string name="nama">Nama Lengkap</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="email">Email</string>
    <string name="passw">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="search">Search........</string>
    <string name="name_kantinku">KantinKu</string>
    <string name="rekomendasi">REKOMENDASI</string>
    <string name="meja_kosong">MEJA KOSONG</string>
    <string name="tersedia_meja_kosong">Tersedia Meja Kosong</string>
    <string name="booking">BOOKING</string>
    <string name="warung1">Warung Nasi Bu tatik</string>
    <string name="menu1">Nasi Ayam Rempah</string>
    <string name="menu2">Mie Ayam Bakso</string>
    <string name="warung2">Warung Pak Agus</string>
    <string name="harga1">Rp 15.000</string>
    <string name="harga2">Rp 12.000</string>
    <string name="menu3">Soto Ayam Kampung</string>
    <string name="warung3">Warung Bu Susi</string>
    <string name="harga3">Rp 10.000</string>
    <string name="menu4">Nasi Uduk</string>
    <string name="warung4">Warung Bu Yanti</string>
    <string name="harga4">Rp 5.000</string>
    <string name="warung5">Warung Mbak Lilis</string>
    <string name="menu5">Aneka Mimuman</string>
    <string name="harga5">Rp 3.000</string>
    <string name="btnregister">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="nama_pengguna">Puput Wulandari</string>
    <string name="email_pengguna">suhajihan@students.amikom.ac.id</string>
    <string name="akun_inf">Akun Info</string>
    <string name="paym">Payment</string>
    <string name="hist">History</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="logout">LOG OUT</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="kantinpay">KantinPay</string>
    <string name="saldo">Rp 50.000</string>
    <string name="top_up">Top Up</string>
    <string name="bayar">Bayar</string>
    <string name="bri_pay">BRI Virtual Account</string>
    <string name="bni_pay">BNI Virtual Account</string>
    <string name="bca_pay">BCA Virtual Account</string>
    <string name="dana_pay">DANA</string>
    <string name="shopee_pay">ShopeePay</string>
    <string name="gopay_pay">GoPay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>