<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProfil"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            tools:srcCompat="@drawable/menu1" />

        <Button
            android:id="@+id/btnEditProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profil" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_pengguna"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_pengguna"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tvInfoAcc"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/akun_inf" />

            <ImageButton
                android:id="@+id/ibInfo"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPayment"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/paym" />

            <ImageButton
                android:id="@+id/ibPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hist" />

            <ImageButton
                android:id="@+id/ibHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSetting"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/setting" />

            <ImageButton
                android:id="@+id/ibSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/help" />

            <ImageButton
                android:id="@+id/ibHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/logout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>