<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="Payment"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kantinpay"
                android:padding="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:padding="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_up" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bayar" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Payment Options"
        android:padding="8dp"
        android:textSize="16sp"
        android:textAlignment="viewStart"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/bri_pay"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="viewStart"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="viewStart"
            android:text="@string/bni_pay" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:text="@string/bca_pay"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="viewStart"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="viewStart"
            android:text="@string/dana_pay" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="viewStart"
            android:text="@string/shopee_pay" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textAlignment="viewStart"
            android:text="@string/gopay_pay" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_arrow_right_black_24dp" />
    </LinearLayout>

</LinearLayout>