<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="39dp"
            tools:srcCompat="@drawable/menu1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/tv10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="viewStart"/>

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="normal"
                android:textAlignment="viewStart"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/harga1" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/nama_pengguna" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJumlah"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Jumlah Order :"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etJumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textSize="1sp"
            android:ems="10"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv12"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Nomor Meja / Take Away:"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNoMeja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:textSize="1sp"
            android:inputType="textPersonName"
            android:text="Name" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:text="Catatan Tambahan" />

    <EditText
        android:id="@+id/etCatatan"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total = Rp 15.000"
        android:textSize="25sp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/btnPayMent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payment Methode"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="OpenPayment"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

</LinearLayout>